<resources>
    <string name="app_name">MDesign</string>
    <string name="edit_txt">Edit</string>
    <string name="search_txt">Search</string>
    <string name="delete_txt">Delete</string>
    <string name="settings_txt">Settings</string>
    <string name="exit_txt">Exit</string>
    <string name="thumbnail">Image description</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="linear_view_h_txt">LinearViewHorizontal</string>
    <string name="linear_view_v_txt">LinearViewVertical</string>
    <string name="grid_view_txt">GridView</string>
    <string name="staggered_view_h_txt">StaggeredViewHorizontal</string>
    <string name="staggered_view_v_txt">StaggeredViewVertical</string>
    <string name="prime_txt">Prime</string>
    <string name="not_prime_txt">Not Prime</string>
</resources>
