<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_linear_view_h"
        android:title="@string/linear_view_h_txt"
        android1:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/menu_linear_view_v"
        android:title="@string/linear_view_v_txt"
        android1:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/menu_grid_view"
        android:title="@string/grid_view_txt"
        android1:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/menu_staggered_view_h"
        android:title="@string/staggered_view_h_txt"
        android1:showAsAction="never"
        android:orderInCategory="100"/>

    <item android:id="@+id/menu_staggered_view_v"
        android:title="@string/staggered_view_v_txt"
        android1:showAsAction="never"
        android:orderInCategory="100"/>


</menu>