<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="6dp"
    card_view:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_row"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/tb0"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prime_txt"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"/>

            <ImageView
                android:id="@+id/list_item_img_row_prime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>